<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/label_image_login"
        android:src="@drawable/ic_patient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:letterSpacing="0.03"
        android:text="@string/label_login"
        android:textAlignment="center"
        android:textColor="#0d6e6a"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="26dp"
        app:layout_constraintEnd_toEndOf="@id/img_login"
        app:layout_constraintStart_toStartOf="@id/img_login"
        app:layout_constraintTop_toBottomOf="@id/img_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/forget"
        app:layout_constraintTop_toBottomOf="@id/label_login"
        app:layout_constraintStart_toStartOf="@id/label_login"
        app:layout_constraintEnd_toEndOf="@id/label_login"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:background="@drawable/forget"
            android:hint="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="5dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/forget"
        app:layout_constraintTop_toBottomOf="@id/txt_input_username"
        app:layout_constraintStart_toStartOf="@id/label_login"
        app:layout_constraintEnd_toEndOf="@id/label_login"
        android:layout_marginTop="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:background="@drawable/forget"
            android:hint="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/txt_input_password"
        app:layout_constraintStart_toStartOf="@id/txt_input_password"
        app:layout_constraintTop_toBottomOf="@id/txt_input_password" />

    <TextView
        android:id="@+id/label_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:padding="6dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/label_or" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/pb_loading"
        style="@style/SpinKitView.Large.Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:SpinKit_Color="?attr/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="@id/btn_register"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>