<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_user"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="16dp"
    android:layout_height="80dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="27/04/2021"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="3dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_date"
            app:layout_constraintRight_toLeftOf="@id/tv_result_name"
            android:background="@color/black"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_result_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/label_name"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/tv_result_gender"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="@id/tv_result_gender"
            app:layout_constraintEnd_toEndOf="@id/tv_result_gender"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_result_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_gender"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.58"
            android:fontFamily="sans-serif-black"
            app:layout_constraintLeft_toRightOf="@id/view"
            app:layout_constraintRight_toLeftOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/tv_result_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.88" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_result_class"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@color/blue"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/label_class"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@id/guideline2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.93" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="240dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>